add swag for loyalty
