# sso/cmd/sso/docs/swagger.json
@@ -27,7 +27,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
@@ -53,7 +53,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Login"
+                            "$ref": "#/definitions/dto.Login"
                         }
                     }
                 ],
@@ -61,7 +61,7 @@
                     "201": {
                         "description": "Login successful",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
@@ -87,7 +87,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Logout"
+                            "$ref": "#/definitions/dto.Logout"
                         }
                     }
                 ],
@@ -95,7 +95,7 @@
                     "200": {
                         "description": "Logout successful",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
@@ -115,7 +115,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
@@ -140,7 +140,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Refresh"
+                            "$ref": "#/definitions/dto.Refresh"
                         }
                     }
                 ],
@@ -148,7 +148,7 @@
                     "201": {
                         "description": "Refresh successful",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
@@ -174,7 +174,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Register"
+                            "$ref": "#/definitions/dto.Register"
                         }
                     }
                 ],
@@ -182,7 +182,7 @@
                     "201": {
                         "description": "Register successful",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
@@ -190,7 +190,7 @@
         }
     },
     "definitions": {
-        "models.Login": {
+        "dto.Login": {
             "type": "object",
             "properties": {
                 "email": {
@@ -201,7 +201,7 @@
                 }
             }
         },
-        "models.Logout": {
+        "dto.Logout": {
             "type": "object",
             "properties": {
                 "token": {
@@ -209,7 +209,7 @@
                 }
             }
         },
-        "models.Refresh": {
+        "dto.Refresh": {
             "type": "object",
             "properties": {
                 "token": {
@@ -217,7 +217,7 @@
                 }
             }
         },
-        "models.Register": {
+        "dto.Register": {
             "type": "object",
             "required": [
                 "password"
@@ -237,7 +237,7 @@
                 }
             }
         },
-        "models.Response": {
+        "dto.Response": {
             "type": "object",
             "properties": {
                 "access_token": {
